@@ -5,45 +5,59 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
-    // Method 1: Using WebMvcConfigurer (recommended approach)
-    @Bean
-    public WebMvcConfigurer corsConfigurer() {
-        return new WebMvcConfigurer() {
-            @Override
-            public void addCorsMappings(CorsRegistry registry) {
-                registry.addMapping("/**") // Apply to all endpoints
-                        .allowedOrigins("http://localhost:3000") //Url do front End
-                        .allowedMethods("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS")
-                        .allowedHeaders("*")
-                        .exposedHeaders("Authorization", "Set-Cookie") // Adicione Set-Cookie
-                        .allowCredentials(true) // Essencial para cookies
-                        .maxAge(3600L); // 1 hour cache for preflight requests
-            }
-        };
-    }
-
-    // Method 2: Using CorsFilter (this is a more comprehensive approach)
     @Bean
     public CorsFilter corsFilter() {
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-
-        config.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-        config.setAllowedMethods(Arrays.asList("*"));
-        config.setAllowedHeaders(Arrays.asList("*"));
-        config.setExposedHeaders(Arrays.asList("Set-Cookie"));
-        config.setAllowCredentials(true); // Isso é CRUCIAL
+        config.setAllowedOrigins(List.of("http://localhost:3000", "https://seu-projeto.vercel.app")); // inclua ambos
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("Authorization", "Set-Cookie"));
+        config.setAllowCredentials(true);
         config.setMaxAge(3600L);
 
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
+
         return new CorsFilter(source);
     }
+
+    // Method 1: Using WebMvcConfigurer (recommended approach)
+//    @Bean
+//    public WebMvcConfigurer corsConfigurer() {
+//        return new WebMvcConfigurer() {
+//            @Override
+//            public void addCorsMappings(CorsRegistry registry) {
+//                registry.addMapping("/**") // Apply to all endpoints
+//                        .allowedOrigins("http://localhost:3000") //Url do front End
+//                        .allowedMethods("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS")
+//                        .allowedHeaders("*")
+//                        .exposedHeaders("Authorization", "Set-Cookie") // Adicione Set-Cookie
+//                        .allowCredentials(true) // Essencial para cookies
+//                        .maxAge(3600L); // 1 hour cache for preflight requests
+//            }
+//        };
+//    }
+
+    // Method 2: Using CorsFilter (this is a more comprehensive approach)
+//    @Bean
+//    public CorsFilter corsFilter() {
+//
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        CorsConfiguration config = new CorsConfiguration();
+//
+//        config.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+//        config.setAllowedMethods(Arrays.asList("*"));
+//        config.setAllowedHeaders(Arrays.asList("*"));
+//        config.setExposedHeaders(Arrays.asList("Set-Cookie"));
+//        config.setAllowCredentials(true); // Isso é CRUCIAL
+//        config.setMaxAge(3600L);
+//
+//        source.registerCorsConfiguration("/**", config);
+//        return new CorsFilter(source);
+//    }
 }
